Fixed image on mobile

--- a/pornote/static/theme.css
+++ b/pornote/static/theme.css
@@ -8,10 +8,6 @@ body {
    font-weight: 200;
 }
 
-.figure {
-   text-align: center;
-}
-
 .caption {
    font-style: italic;
    text-align: center;
